- Changing Chummer's language immediately causes all open forms to be translated into a new language, even before restarting.
- Negative qualities that contribute to bonus karma but do not contribute to quality karma limits are no longer affected by the house rule where karma from negative qualities past the quality karma limit is not awarded to characters.

Data Changes:
- One with the Matrix I, II, and III can no longer be taken multiple times.
- Fixed Hedge Witch/Wizard drain reduction not working properly. Existing character with this quality will need to remove and then re-add it to see the effects (or reapply improvements). Fixes #4715.
- Dedicated Spellslinger and Dedicated Conjurer now properly disable access to the Summoning and Binding skills and the Spellcasting skill respectively.
- Delnar Skills Remake now reports the appropriate dice pools for rituals (based on Ceremony) and enchantments (based on Arcana).
- Neural Amplifiers (Learning Stimulus) has had its backend modified so that it stacks and works better together with other karma cost-modifying improvements. 
- Fixed incorrect autosoft type on the Avibras-Nissan AN 822.
- Fixed incorrect damage, accuracy and AP values for Hammerhead and Incendiary Head arrows. Fixed incorrect Stick-n-Shock arrowhead accuracy (courtesy of Stexinator)
- Added RAW weights for explosives, where each quantity of an explosive weights one kilogram.
- Replaced the Genemod category with the actual category types used for geneware.
- Added Geneware, Magic, Nanoware and Software as Black Market Pipeline categories. Some categories that used to be flagged as part of Cyberware, Bioware, or Electronics have had their flags changed to one of the new ones.
- Expanded the categories covered by the Black Market Pipeline options of Armor, Weapons, Drugs, Electronics, and Drugs to cover a few more categories than before that include items that would fall into those options.